# analyze-and-publish-template

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  README.org  copier.yml  ctt-test-template.sh  ctt.toml  project.org
template/: .LICENSE.template  .air.toml  .bazelrc  .dir-locals.el  .envrc.template  .gitattributes  .gitignore  .gitignore.jinja  .hasrc  .pre-commit-config.yaml  .projectable.toml  BUILD.bazel  MODULE.bazel  QUICK_START.md  README.md.jinja  clay.edn  copier.yaml  ctt.toml  deps.edn  dev.cljs.edn  dotfiles.fossil  dvc.yaml  justfile.jinja  mise.toml  nbb.edn  package.json  palmer-penguins.just  pixi.toml  pixi.toml.template  project-{{short_name}}.org  project-{{short_name}}.org.jinja  pyproject.toml  pyproject.toml.jinja  {% if include_jujutsu %}.jjconfig.toml{% endif %}  {% if include_jujutsu %}jj.just{% endif %}  {% if include_jujutsu and include_fossil %}HYBRID-VCS-GUIDE.md{% endif %}  {% if include_jujutsu and include_fossil %}hybrid-vcs.just{% endif %}  {{short-name}}.main.nf
template/.elisp/: project-setup.el
template/.emacs.proj/: project-setup.el
template/.fish/: aliases.sh  config.fish  run_fish.sh  starship.toml
template/.mise/tasks/: greet
template/analysis/: BUILD.bazel  DASHBOARDS_PIPELINES_IMPROVEMENTS.md  DATA_STRUCTURE_IMPROVEMENTS.md  analysis.just  bb.edn  jreleaser.yml  justfile  package-lock.json  package.json  palmer-penguins.just  pixi.toml.template  pyproject.toml.jinja
template/analysis/config/: config.yaml  experiment_tracking.yaml
template/analysis/dashboards/: dashboards.just  observablejs-palmer-penguin.qmd
template/analysis/data/: .gitignore  data-{{short_name}}.org  data.just
template/analysis/infrastructure/: BUILD.bazel  CANONICAL_HASHICORP_INTEGRATION.md  README.md  justfile
template/analysis/misc/: meetings-{{short_name}}.org
template/analysis/notebooks/: experiment_template.qmd  experiments-{{short_name}}.org  experiments.template.md  notebooks.just  notebooks.md
template/analysis/pbin/: dirpruner.bb.clj  hello
template/analysis/pipelines/: README_results_management.md  pipelines-{{short_name}}.org  pipelines.just
template/analysis/scripts/: README.md  scripts-{{short_name}}.org  scripts.just
template/analysis/tests/: tests.org
template/analysis/{% if include_infrastructure %}infrastructure{% endif %}/: .gitkeep
template/dashboards/: observablejs-palmer-penguin.qmd
template/data/: README.md  datasetinfo.linkml.yaml
template/data/00_dictionaries/: datasetinfo.linkml.yaml
template/infrastructure/: environments.just  infrastructure.just.jinja  setup_java.sh
template/infrastructure/juju/: minio-microk8s-bundle.yaml
template/infrastructure/local/: docker-compose.yml
template/infrastructure/packer/: image.json
template/infrastructure/terraform/: microk8s.tf  nomad.tf
template/infrastructure/virtualization/: README.md
template/infrastructure/waypoint/: deploy.sh
template/misc/: codeqc.just  dirkeeper.py  dirpruner.py  meetings-{{short_name}}.org  meetings.template.org
template/notebooks/: ANALYSIS-{{project_name}}.org.jinja  CLAY-{{project_name}}.clj  README.md  claybook-{{short_name}}.clj  claybook.clj  experiments-log-{{project_name}}.org.jinja  experiments-{{short_name}}.org  notebooks.just
template/notebooks/clerk/: clerkbook.clj  penguins.clj
template/pbin/: dirpruner.fixme.py  dirpruner.py
template/pipelines/: pipelines.just
template/scripts/: scripts-{{short_name}}.org  scripts.just
template/scripts/julia/: hello.jl
template/scripts/node-babashka/: bun.cljs
template/scripts/nushell/: scratch.nu
template/scripts/python/: README.md
template/src/data/: autoeda.py  expectations.py
template/web/: run.sh
template/writeup/: .fossil-settings  README.md  justfile  writeup.fossil  writeup.just
template/{% if include_analysis %}analysis{% endif %}/: .gitkeep
template/{% if include_misc %}misc{% endif %}/: .gitkeep
template/{% if include_writeup %}writeup{% endif %}/: .gitkeep
(+251 files in other folders)
